--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -3,18 +3,16 @@
     <div class="col-12 mt-3">
       <h1>Buscador</h1>
     </div>
-    <div class="col-12" style="display: flex;justify-content: center;align-items: center;flex-direction: row;">
+    <div class="col-12" style="display: flex; justify-content: center; align-items: center; flex-direction: row;">
       <input (ngModelChange)="searchOnChange()" [(ngModel)]="this.search" class="form-control mr-sm-2" type="search"
-        placeholder="Search" aria-label="Search">
-      <button (click)="searchDocument()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      <!--
-      JS: onclick="searchDocument()"
-      Angular: (click)=searchDocument
-      -->
+        placeholder="Buscar evento" aria-label="Search">
+      <button (click)="searchDocument()" class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
     </div>
     <div class="col-12">
-      <p *ngFor="let i of filtered">
-        {{i.title}}
+      
+      <p *ngFor="let i of filtered" (click)="viewEventDetail(i.id)" style="cursor: pointer;">
+       
+        {{ i.title }}
       </p>
     </div>
   </div>
